# Increment-Diff

./: CMakeLists.txt  Readme.md
include/: Commands.hpp  FileNode.hpp  Format.hpp
src/: CMakeLists.txt  main.cpp
test/new/: b.txt  note.txt
test/new/sub_dir/: d.txt
test/old/: b.txt
test/old/sub_dir/: d.txt
util/: getsha1.sh
